--- a/style.css
+++ b/style.css
@@ -135,13 +135,14 @@ div{
     min-height: 200px;
     max-width: 90%;
     margin: 0 auto;
+    font-size: 20px;
 }
 #main #button-2{
     font-size: 30px;
     border: solid white;
     background: white;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 25px;
     
 }
 
